Demo Site | Partial Fix for features iamges overlapping feature cards copy at desktop resolutions.
Z-index adjusted so the text is still visible.

--- a/stylesheets/_about.scss
+++ b/stylesheets/_about.scss
@@ -9,8 +9,8 @@
     background-size: contain;
     position: absolute;
     width: 55rem;
-    left: auto;
-    right: 0;
+    left: 45%;
+    right: auto;
   }
 }
 
