--- a/stylesheets/_features.scss
+++ b/stylesheets/_features.scss
@@ -75,6 +75,7 @@
 .feature-card-image {
   &.bg-image {
     padding-bottom: 0;
+    z-index: 0;
   }
   @include desktop__1024 {
     &.bg-image {
