--- a/stylesheets/_typography.scss
+++ b/stylesheets/_typography.scss
@@ -32,6 +32,7 @@ h4 {
   font-weight: normal;
   color: #212353;
   margin: 1.5rem 0;
+  z-index: 10;
 }
 
 h5,
